; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_46877.c_search_rwx_mem.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/local/extr_46877.c_search_rwx_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [13 x i8] c"/proc/%d/map\00", align 1
@O_RDONLY = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"can't open %s\0A\00", align 1
@MA_READ = common dso_local global i32 0, align 4
@MA_WRITE = common dso_local global i32 0, align 4
@MA_EXEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @search_rwx_mem() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [16 x i8], align 16
  %3 = alloca %struct.TYPE_3__, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 0, i32* %4, align 4
  %6 = getelementptr inbounds [16 x i8], [16 x i8]* %2, i64 0, i64 0
  %7 = call i64 (...) @getpid()
  %8 = trunc i64 %7 to i32
  %9 = call i32 @sprintf(i8* %6, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = getelementptr inbounds [16 x i8], [16 x i8]* %2, i64 0, i64 0
  %11 = load i32, i32* @O_RDONLY, align 4
  %12 = call i32 @open(i8* %10, i32 %11)
  store i32 %12, i32* %1, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %0
  %15 = load i32, i32* @stderr, align 4
  %16 = getelementptr inbounds [16 x i8], [16 x i8]* %2, i64 0, i64 0
  %17 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i8* %16)
  %18 = call i32 @exit(i32 1) #3
  unreachable

19:                                               ; preds = %0
  br label %20

20:                                               ; preds = %43, %19
  %21 = load i32, i32* %1, align 4
  %22 = call i64 @read(i32 %21, %struct.TYPE_3__* %3, i32 8)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %44

24:                                               ; preds = %20
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %43

28:                                               ; preds = %24
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @MA_READ, align 4
  %32 = load i32, i32* @MA_WRITE, align 4
  %33 = or i32 %31, %32
  %34 = load i32, i32* @MA_EXEC, align 4
  %35 = or i32 %33, %34
  %36 = and i32 %30, %35
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %42

38:                                               ; preds = %28
  %39 = load i32, i32* %4, align 4
  store i32 %39, i32* %5, align 4
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  store i32 %41, i32* %4, align 4
  br label %42

42:                                               ; preds = %38, %28
  br label %43

43:                                               ; preds = %42, %24
  br label %20

44:                                               ; preds = %20
  %45 = load i32, i32* %1, align 4
  %46 = call i32 @close(i32 %45)
  %47 = load i32, i32* %5, align 4
  %48 = and i32 %47, 255
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %53, label %50

50:                                               ; preds = %44
  %51 = load i32, i32* %5, align 4
  %52 = or i32 %51, 4
  store i32 %52, i32* %5, align 4
  br label %53

53:                                               ; preds = %50, %44
  %54 = load i32, i32* %5, align 4
  %55 = and i32 %54, 65280
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %60, label %57

57:                                               ; preds = %53
  %58 = load i32, i32* %5, align 4
  %59 = or i32 %58, 1024
  store i32 %59, i32* %5, align 4
  br label %60

60:                                               ; preds = %57, %53
  %61 = load i32, i32* %5, align 4
  ret i32 %61
}

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i64 @getpid(...) #1

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i64 @read(i32, %struct.TYPE_3__*, i32) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
